<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/rollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RollActivity"
    tools:showIn="@layout/roll_activity"
    tools:keep="@layout/content_roll">

    <!-- Picker -->
    <Spinner
        android:id="@+id/dice_spec"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageButton android:id="@+id/edit_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:onClick="editDiceSpec"
        tools:context="org.semprebon.droiddice3.RollActivity"
        app:srcCompat="@drawable/pencil_icon"
        android:contentDescription="@string/update_button"
        android:background="@android:color/transparent"
        android:tint="@color/tint_selector"/>

    <!-- Edit -->
    <RelativeLayout android:id="@+id/edit_dice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dice_spec"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView android:id="@+id/name_edit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:labelFor="@+id/name_edit"
            android:text="@string/name_edit_label" />

        <EditText android:id="@+id/name_edit"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/name_edit_label"
            android:layout_toLeftOf="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            tools:text="Alexi - Fighting" />

        <TextView android:id="@+id/dice_spec_edit_label"
            android:layout_below="@id/name_edit"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/dice_spec_edit"
            android:text="@string/dice_spec_label" />

        <EditText android:id="@+id/dice_spec_edit"
            android:layout_below="@id/name_edit"
            android:layout_alignStart="@id/name_edit"
            android:layout_toRightOf="@id/name_edit_label"
            android:layout_toLeftOf="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            tools:text="d8!+d6![k1]" />

        <ImageButton android:id="@+id/save_button"
            android:layout_below="@id/name_edit"
            android:layout_toLeftOf="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveDiceSpec"
            app:srcCompat="@drawable/save_icon"
            android:contentDescription="@string/save_button"
            android:background="@android:color/transparent"
            android:tint="@color/tint_selector"/>

        <ImageButton android:id="@+id/cancel_button"
            android:layout_below="@id/name_edit"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="closeDiceSpecEdit"
            app:srcCompat="@drawable/close_icon"
            android:contentDescription="@string/cancel_button"
            android:background="@android:color/transparent"
            android:tint="@color/tint_selector"/>
    </RelativeLayout>

    <TextView android:id="@+id/result_text"
        android:layout_below="@+id/edit_dice"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="48pt"
        android:textColor="@color/rolledBarColor"
        tools:text="@string/initial_roll"/>

    <TextView android:id="@+id/probability_text"
        android:layout_toEndOf="@+id/result_text"
        android:layout_below="@+id/edit_dice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/result_text"
        tools:text="@string/zero_percent" />

    <FrameLayout android:id="@+id/chart_frame"
        android:layout_below="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <org.semprebon.droiddice3.ChartView
            android:id="@+id/chart_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            barColor="@color/barColor"/>
    </FrameLayout>

</RelativeLayout>
